# chopchop

./: .gitignore  LICENSE  README.md  pyproject.toml
chopchop/: __init__.py  chopchop.py  logging.py  main.py
example/: htb_lovely.py
